test/studies/hpcc/RA/marybeth/ra-uint-test1.good
ra-uint-test1.chpl:5: error: type mismatch in assignment from int to uint(64)
